# STUDIO

./: .gitignore  BRANDING.md  Generate_All_8_Casting_Shots.ps1  MODULES.md  ORG_CHART.md  PRODUCER.md  README.md  STUDIO_Production_Canon_v1.0.md  batch_demo.json  pyproject.toml
Art_Department/: README.md
Asset_Metadata/: test_hero.json
Batch_Outputs/: batch_20260616_1647.json
Canons/: Historical_SoT_Standard_v1.md  README.md  Real_World_Reference_Policy_v1.md  Scientific_SoT_Standard_v1.md
Cast/: README.md
Client_Services/: README.md
Compliance_Reports/: CARA_Compliance_Report_Generic_Test_20260616_164729.txt  Valentina_GFE_Teasing_Sequence_Compliance_20260616_1229.txt  Valentina_Rossi_Sculptural_Black_Coat_Editorial_20260616_1119_Batch_Compliance_20260616_123104.txt
Crew/: README.md
Distribution/: README.md
GFE/: GFE_ASMR_All_Prompts_v1.1.md  GFE_ASMR_Camera_Interaction_Library_v1.1.md  README.md
Grok_Video_Packs/: Hero_Editorial_Teasing_v1_20260616_1643.json  Hero_Editorial_Teasing_v1_20260616_1647.json
Legal/: Gate_0_Checklist.md  README.md
Locations/: README.md
MAGAZINE/: .gitignore  README.md  UNIVERSE.md
Magazine_Assets/: Aiko_Magazine_runway.txt  Aiko_Magazine_studio.txt  Ember_Magazine_runway.txt  Ember_Magazine_studio.txt  Hana_Magazine_runway.txt  Hana_Magazine_studio.txt  Iris_Magazine_runway.txt  Iris_Magazine_studio.txt  Jade_Magazine_runway.txt  Jade_Magazine_studio.txt  Kira_Magazine_runway.txt  Kira_Magazine_studio.txt  Luna_Magazine_runway.txt  Luna_Magazine_studio.txt  Lyra_Magazine_runway.txt  Lyra_Magazine_studio.txt  (+26 more)
(+2436 files in other folders)
